<resources>
    <string name="app_name">HalleySdkDemo</string>
    <string name="action_settings">Settings</string>
    <string name="titletext">哈雷SDK</string>
    <string name="tasklist">任务列表</string>
    <string name="running">正在下载</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="wait">等待</string>
    <string name="complete">完成</string>
    <string name="open">打开</string>
    <string name="failed">失败</string>
    <string name="error">错误</string>
    <string name="cancel">删除</string>
    <string name="detail">详情</string>
    <string name="urlhint">请输入下载资源地址</string>
    <string name="addtask">添加任务</string>
    <string name="title_activity_detail">任务详情</string>
    <string name="task_basic_info">基本信息</string>
    <string name="address">下载地址</string>
    <string name="taskid">任务ID</string>
    <string name="filename">文件名</string>
    <string name="filesize">总大小</string>
    <string name="dlsize">已下载</string>
    <string name="savepath">存储路径</string>
    <string name="networkinfo">网络信息</string>
    <string name="timecost">任务耗时</string>
    <string name="cur_rate">当前速度</string>
    <string name="avg_rate">平均速度</string>
    <string name="errorinfo">错误信息</string>
    <string name="stateinfo">状态信息</string>
    <string name="taskstate">当前状态</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
