<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.knownsec.halleysdkdemo.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp">
        <TextView
            android:layout_marginTop="0dp"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_basic_info"
            android:textStyle="bold"
            android:textSize="@dimen/bigfontsize"
            android:textColor="@color/gray"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dlurl"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/address"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/dlurl_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="www.sina.com/dl/a.apk"
                android:textColor="@color/gray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/savepath"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/savepath"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/savepath_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="/data/myapp/storage/"
                android:textColor="@color/gray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/taskid"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/taskid"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/taskid_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="ABDDKDKDBDK112B"
                android:textColor="@color/gray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/filename"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/filename"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/filename_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="a.apk"
                android:textColor="@color/gray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/filesize"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/filesize"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/filesize_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="23,459Bytes"
                android:textColor="@color/gray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dlsize"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/dlsize"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/dlsize_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="10234Btyes"
                android:textColor="@color/gray"/>
        </FrameLayout>



        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/networkinfo"
            android:textStyle="bold"
            android:textSize="@dimen/bigfontsize"
            android:textColor="@color/gray"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/timecost"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/timecost"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/timecost_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="120s"
                android:textColor="@color/gray"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/currate"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/cur_rate"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/currate_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="231kbps"
                android:textColor="@color/gray"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/avgrate"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/avg_rate"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/avgrate_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="211kbps"
                android:textColor="@color/gray"/>
        </FrameLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stateinfo"
            android:textStyle="bold"
            android:textSize="@dimen/bigfontsize"
            android:textColor="@color/gray"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/taskstate"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textfontsize"
                android:textStyle="bold"
                android:text="@string/taskstate"
                android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/taskstate_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/textfontsize"
                android:gravity="center_vertical"
                android:text="@string/running"
                android:textColor="@color/gray"/>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
