<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/add_task_input_edit_bkg"
    android:layout_marginTop="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_marginLeft="4dp"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_weight="0"
        android:layout_gravity="center_vertical"
        android:src="@drawable/listitem_icon_download"/>
    <ProgressBar
        android:id="@+id/prog_bar"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="4dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:max="100"
        android:progressDrawable="@drawable/progress_bar_color"
        android:indeterminate="false"
        style="?android:attr/progressBarStyleHorizontal"/>
    <Button
        android:id="@+id/pause"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/listitem_button"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:text="@string/pause"
        android:textSize="10dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/cancel"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:textSize="10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/listitem_button"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:text="@string/cancel"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/detail"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="4dp"
        android:textSize="10dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/listitem_button"
        android:layout_width="26dp"
        android:layout_height="23dp"
        android:textColor="@color/white"
        android:text="@string/detail"/>
</LinearLayout>