<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.knownsec.halleysdkdemo.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="3dp">
        <TextView
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addtask"
            android:textSize="@dimen/bigfontsize"
            android:textStyle="bold"
            android:textColor="@color/gray"/>
        <ImageView
            android:visibility="visible"
            android:src="@drawable/daoke_split_line"
            android:layout_gravity="right|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"  >
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/add_task_input_edit_bkg"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/task_edit"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="30dp"
                    android:padding="2dp"
                    android:drawablePadding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="textNoSuggestions"
                    android:textCursorDrawable="@null"
                    android:textStyle="normal"
                    android:background="@null"
                    android:hint="@string/urlhint"/>

                <ImageView
                    android:visibility="visible"
                    android:layout_marginRight="6dp"
                    android:src="@drawable/clear_url"
                    android:id="@+id/search_iv_delete"
                    android:layout_gravity="right|center_vertical"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            </FrameLayout>

            <Button
                android:id="@+id/add_task"
                android:layout_marginRight="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/add_task_btn_bkg"
                android:layout_width="28dp"
                android:layout_height="28dp"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasklist"
            android:textSize="@dimen/bigfontsize"
            android:textStyle="bold"
            android:textColor="@color/gray"/>
        <ImageView
            android:visibility="visible"
            android:src="@drawable/daoke_split_line"
            android:layout_gravity="right|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tasklistview"
            android:layout_marginTop="10dp">
        </ListView>
    </LinearLayout>
</RelativeLayout>
